--- a/java/pom.xml
+++ b/java/pom.xml
@@ -16,7 +16,18 @@
 			<artifactId>aspectjweaver</artifactId>
 			<version>1.5.4</version>
 		</dependency>
-
+        <!-- spring redis 集成 -->
+         <dependency>  
+            <groupId>redis.clients</groupId>  
+            <artifactId>jedis</artifactId>  
+            <version>2.8.1</version>  
+        </dependency>  
+        <dependency>  
+            <groupId>org.springframework.data</groupId>  
+            <artifactId>spring-data-redis</artifactId>  
+            <version>1.7.2.RELEASE</version>  
+        </dependency> 
+        <!-- spring redis 结束-->
 	</dependencies>
 
 	<build>
