--- a/java/src/prop/redis.properties
+++ b/java/src/prop/redis.properties
@@ -1,3 +1,10 @@
 
 redis.host=172.25.15.187
 redis.port=8190
+
+redis.dbIndex=0  
+redis.expiration=3000  
+redis.maxIdle=300  
+redis.maxActive=600  
+redis.maxWait=1000  
+redis.testOnBorrow=true
