改成服务的client

--- a/sourcecode/codemonkey.springboot/src/main/resources/application-test.properties
+++ b/sourcecode/codemonkey.springboot/src/main/resources/application-test.properties
@@ -33,3 +33,8 @@ spring.redis.timeout=1000
 # AOP
 spring.aop.auto=true
 spring.aop.proxy-target-class=true
+
+
+spring.application.name=eureka-client
+server.port=8182
+eureka.client.serviceUrl.defaultZone=http://localhost:8181/eureka/
